app/assets/stylesheets/cfa_ui_components/components/forms.css
form {
    @apply flex flex-col gap-y-cfa-xl;
}

input[type="text"],
input[type="number"],
input[type="email"],
input[type="tel"],
input[type="date"],
input[type="search"],
input[type="password"],
input[type="url"],
textarea,
select {
    @apply border border-border-default rounded-lg px-cfa-sm py-cfa-sm bg-white text-text-default;

    &:focus-visible {
        @apply outline-2 outline-offset-2 outline-focus;
    }

    &:disabled {
        @apply bg-background-disabled text-text-disabled border-border-disabled cursor-not-allowed;
    }
}

.radio_button_item {
    @apply flex items-center gap-cfa-sm;
    label { margin-bottom: 0; }
    .field_with_errors { display: contents; }
}

.checkbox_item {
    @apply flex items-center gap-cfa-sm;
}

/* the css rules below are to remove the spin button from the input currency component */
.currency-field input[type="number"]::-webkit-outer-spin-button,
.currency-field input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.currency-field input[type="number"] {
  -moz-appearance: textfield;
}

.form_errors,
.form_warning {
    @apply  mt-cfa-sm;
    font-size: 13px;
    font-weight: 700;
    line-height: normal;
    a {
        text-decoration: underline;
    }
}
/* Checkbox */
.cfa-checkbox {
  @apply appearance-none bg-white cursor-pointer flex-shrink-0;
  box-sizing: border-box;
}

.cfa-checkbox:checked {
  background-color: var(--color-primary);
}

.cfa-checkbox:disabled {
  border-color: var(--color-border-disabled);
  background-color: var(--color-background-disabled);
  cursor: not-allowed;
}

.cfa-checkbox-wrap {
  flex-shrink: 0;
}

.cfa-checkbox-wrap .cfa-icon {
  display: none;
}

.cfa-checkbox-wrap:has(.cfa-checkbox:checked) .cfa-icon {
  display: inline-block;
}

.cfa-checkbox:indeterminate {
  background-color: var(--color-background-indeterminate);
}

.cfa-checkbox-wrap:has(.cfa-checkbox:indeterminate) .cfa-icon {
  display: none;
}

.cfa-checkbox-wrap:has(.cfa-checkbox:indeterminate)::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 20%;
  right: 20%;
  height: 2px;
  background-color: var(--color-text-default);
  transform: translateY(-50%);
  pointer-events: none;
}

/* Radio */
.cfa-radio {
  @apply appearance-none border-2 border-border-default rounded-full bg-white cursor-pointer relative;
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  flex-shrink: 0;
}

.cfa-radio:checked {
  background: radial-gradient(circle, black 60%, white 60%);
}


.cfa-radio:disabled {
  border-color: var(--color-border-disabled);
  background-color: var(--color-background-disabled);
  cursor: not-allowed;
}

.cfa-radio--small {
  width: 16px;
  height: 16px;
}


.cfa-radio--error {
  border-width: 2px;
  border-color: var(--color-border-error);
}

.cfa-radio--warning {
  border-width: 2px;
  border-color: var(--color-border-warning);
}

/* Standard invalid fields */
[aria-invalid="true"],
.field_with_errors input,
.field_with_errors select,
.field_with_errors textarea {
  border-color: var(--color-border-error) !important;
  outline-color: var(--color-border-error) !important;
}

/* Focus state */
[aria-invalid="true"]:focus,
.field_with_errors input:focus,
.field_with_errors select:focus,
.field_with_errors textarea:focus {
  outline-color: var(--color-border-error) !important;
}


.field_with_errors {
    display: block;
    input {
        border-color: var(--color-border-error) !important;
    }
}

